# dj-stepik

./: justfile  pyproject.toml
.github/actions/setup/: action.yaml
project/mysite/: settings.py  urls.py
project/mysite/templates/: base.html
project/templates/: base.html
project/women/: converters.py  models.py  urls.py  views.py
project/women/migrations/: 0001_initial.py
project/women/templates/women/: about.html  categories.html  detail.html  index.html
project/women/templates/women/components/: nav.html
project/women/templatetags/: women.py
