[project]
name = "dj-stepik"
version = "0.1.0"
description = "Django app based on a Stepik course"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["django>=5.1.3"]

[dependency-groups]
dev = [
    "djlint>=1.36.1",
    "ipython>=8.29.0",
    "ruff>=0.7.3",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["A", "B", "DJ", "E", "F", "I", "N", "W"]
ignore = ["F401"]

[tool.djlint]
profile = "django"
ignore = "H030,H031,T003"
blank_line_after_tag = "load,extends"
